examples/des-y3_and_kids-1000.ini:
removed S8 as a derived parameter
as we're marginalising over it

--- a/examples/des-y3_and_kids-1000.ini
+++ b/examples/des-y3_and_kids-1000.ini
@@ -14,7 +14,7 @@ modules =   consistency camb extrapolate
 likelihoods = 2pt cosebis
 values  = examples/des-y3_and_kids-1000-values.ini
 priors  = examples/des-y3_and_kids-1000-priors.ini
-extra_output =  cosmological_parameters/S_8 cosmological_parameters/sigma_8 
+extra_output =  cosmological_parameters/sigma_8 
                 cosmological_parameters/A_s cosmological_parameters/omega_m 
                 cosmological_parameters/omega_lambda cosmological_parameters/cosmomc_theta 
                 delta_z_out_kids/bin_1 delta_z_out_kids/bin_2 delta_z_out_kids/bin_3 
