--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ likelihood/planck2015/plc-2.0/buildir/
 likelihood/planck2015/plc-2.0/include/
 likelihood/planck2015/plc-2.0/lib/
 likelihood/planck2015/plc-2.0/share/
+shear/cosebis/modules/besselzero04.h
 boltzmann/hi_class/hi_class_pub_devel/
 likelihood/planck2018/baseline/
 likelihood/planck2018/COM_Likelihood_Data-baseline_R3.00.tar.gz
