--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,19 @@ jobs:
         run:  |
           wget https://lambda.gsfc.nasa.gov/data/map/dr5/dcp/likelihood/wmap_likelihood_full_v5.tar.gz
 
+      - name: Cache ACT data
+        id: cache-act
+        uses: actions/cache@v3
+        with:
+          path: ACT_dr6_likelihood_v1.1.tgz
+          key: act-dr6-data
+          enableCrossOsArchive: true
+          
+      - if: ${{ steps.cache-act.outputs.cache-hit != 'true' }}
+        name: Download ACT data
+        run:  |
+          wget https://lambda.gsfc.nasa.gov/data/suborbital/ACT/ACT_dr6/likelihood/data/ACT_dr6_likelihood_v1.1.tgz
+
 
 
 
@@ -74,8 +87,7 @@ jobs:
 
       - name: Install dependencies with conda
         shell: bash -l {0}
-        run: mamba install -c conda-forge "cosmosis>=3.0.1" cosmosis-build-standard-library
-
+        run: mamba install -c conda-forge "cosmosis>=3.2" cosmosis-build-standard-library pytest
       
       - name: Get Cached Planck
         uses: actions/cache/restore@v3
@@ -90,17 +102,29 @@ jobs:
           path: wmap_likelihood_full_v5.tar.gz
           key: wmap-9-data
           fail-on-cache-miss: true
+
+      - name: Get Cached ACT
+        uses: actions/cache/restore@v3
+        with:
+          path: ACT_dr6_likelihood_v1.1.tgz
+          key: act-dr6-data
+          fail-on-cache-miss: true
           
       - name: Extract data
         shell: bash -l {0}
         run: |
+          # WMAP
           pushd likelihood/wmap9/data
           tar -zxvf ../../../wmap_likelihood_full_v5.tar.gz
           mv wmap_likelihood_v5/data/* .
           popd
+          #Planck
           pushd likelihood/planck2018
           tar -zxvf ../../COM_Likelihood_Data-baseline_R3.00.tar.gz
           popd
+          # ACT
+          pushd likelihood/act-dr6-lens/
+          tar -zxvf ../../ACT_dr6_likelihood_v1.1.tgz
 
       - name: Build standard library
         shell: bash -l {0}
@@ -108,158 +132,11 @@ jobs:
           source cosmosis-configure
           make
 
-      - name: Smail example
+      - name: Run Tests
         shell: bash -l {0}
         run: |
           source cosmosis-configure
-          cosmosis examples/various-spectra.ini -p consistency.extra_relations='omega_x=omega_c+100'
-          grep -e 'omega_x = 100.261' output/various-spectra/cosmological_parameters/values.txt
-
-      - name: BAO
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/bao.ini
-
-      - name: CAMB Planck
-        shell: bash -l {0}
-        run: |
-          # print out the configuration
-          python -m cosmosis.configure
-          source cosmosis-configure
-          export
-          mkdir -p output
-          # And that the pipeline runs afterwards
-          cosmosis examples/planck.ini | tee output/planck.log
-          grep -e 'Likelihood =  -1441.14' -e 'Likelihood =  -1441.30' -e 'Likelihood =  -1441.46' output/planck.log
-          
-
-      - name: Class Planck
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/planck_class.ini -p class.mpk=T | tee output/class.log
-          # This may need updating as we modify the class interface
-          # The settings are not optimized
-          # grep 'Likelihood =  -5968.93' output/class.log
-          # This seems to give different results on different systems
-
-
-      - name: WMAP likelihood
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/wmap.ini | tee output/wmap.log
-
-
-      - name: Pantheon emcee
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/pantheon.ini -p emcee.samples=20
-          cosmosis-postprocess examples/pantheon.ini -o output/pantheon
-          test -f output/pantheon/cosmological_parameters--omega_m.png
-
-      - name: PantheonPlusAndShoes
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/pantheon_plus_shoes.ini -p runtime.sampler=test | tee output/pantheon_plus_shoes_log.txt
-          grep 'Likelihood =  -738.23' output/pantheon_plus_shoes_log.txt
-
-      - name: DES Y1 likelihood
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/des-y1.ini | tee output/des-y1.log
-          # unchanged in camb 1.4
-          grep 'Likelihood =  5237.3' output/des-y1.log
-
-      - name: DES Y1 likelihood with cl_to_corr
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/des-y1.ini -p 2pt_shear.file=./shear/cl_to_corr/cl_to_corr.py 2pt_shear.corr_type=xi | tee output/des-y1.log
-          # unchanged in camb 1.4
-          grep 'Likelihood =  5237.3' output/des-y1.log
-
-
-      - name: DES Y3 likelihood
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/des-y3.ini -p pk_to_cl_gg.save_kernels=T pk_to_cl.save_kernels=T | tee output/des-y3.log
-          # Different versions - camb changes and scipy interpolation changes both alter these
-          grep -e 'Likelihood =  6043.23' -e 'Likelihood =  6043.34' -e 'Likelihood =  6043.33' output/des-y3.log
-
-
-      - name: DES Y3 Class likelihood
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/des-y3-class.ini
-          # class is not consistent across systems to the level needed here
-
-      - name: DES Y3 cosmic shear likelihood
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/des-y3-shear.ini | tee output/des-y3-shear.log
-          grep -e 'Likelihood =  2957.03' -e 'Likelihood =  2957.12' -e 'Likelihood =  2957.11' output/des-y3-shear.log
-
-
-      - name: DES Y3 likelihood with Mira Titan
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/des-y3-mira-titan.ini | tee output/des-y3-mt.log
-          grep -e 'Likelihood =  6048.0' -e 'Likelihood =  6048.1' output/des-y3-mt.log
-
-      - name: DES Y3 likelihood with Mead nonlinear
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/des-y3.ini -v halo_model_parameters.logT_AGN=8.2 -p camb.halofit_version=mead2020_feedback | tee output/des-y3-mead.log
-          grep -e 'Likelihood =  6049.94' -e 'Likelihood =  6049.00' output/des-y3-mead.log
-
-      - uses: actions/cache@v2
-        name: ACT Data Cache
-        id: cache-act
-        with:
-          path: likelihood/act-dr6-lens/data/v1.1
-          key: ${{ runner.os }}-act-dr6-v1.1
-
-      - name: Download ACT DR6 Lensing Data
-        if: steps.cache-act.outputs.cache-hit != 'true'
-        run: |
-            cd likelihood/act-dr6-lens/
-            ./get-act-data.sh
-
-      - name: ACT DR6 Lensing
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/act-dr6-lens.ini | tee output/act-dr6.log
-          grep -e 'Likelihood =  -9.89' -e 'Likelihood =  -9.86' -e 'Likelihood =  -9.90' output/act-dr6.log
-
-      - name: DES Y3 6x2pt
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/des-y3-6x2.ini
-
-      - name: Euclid emulator
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/euclid-emulator.ini
-          test -f output/euclid-emulator/matter_power_nl/p_k.txt
-
-      - name: Log w example
-        shell: bash -l {0}
-        run: |
-          source cosmosis-configure
-          cosmosis examples/w_model.ini | tee output/w_model.log
+          pytest -vv tests/test_cosmosis_standard_library.py
 
       - name: Run Demos
         shell: bash -l {0}
@@ -273,7 +150,7 @@ jobs:
     needs: Download_Data
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9, "3.10", "3.11"]
+        python-version: [3.7, 3.8, 3.9, "3.10", "3.11"]
 
     steps:
     - name: Checkout repository
@@ -308,16 +185,28 @@ jobs:
         key: wmap-9-data
         fail-on-cache-miss: true
         
+    - name: Get Cached ACT
+      uses: actions/cache/restore@v3
+      with:
+        path: ACT_dr6_likelihood_v1.1.tgz
+        key: act-dr6-data
+        fail-on-cache-miss: true
+    
     - name: Extract data
       shell: bash -l {0}
       run: |
-          pushd likelihood/wmap9/data
-          tar -zxvf ../../../wmap_likelihood_full_v5.tar.gz
-          mv wmap_likelihood_v5/data/* .
-          popd
-          pushd likelihood/planck2018
-          tar -zxvf ../../COM_Likelihood_Data-baseline_R3.00.tar.gz
-          popd
+        # WMAP
+        pushd likelihood/wmap9/data
+        tar -zxvf ../../../wmap_likelihood_full_v5.tar.gz
+        mv wmap_likelihood_v5/data/* .
+        popd
+        #Planck
+        pushd likelihood/planck2018
+        tar -zxvf ../../COM_Likelihood_Data-baseline_R3.00.tar.gz
+        popd
+        # ACT
+        pushd likelihood/act-dr6-lens/
+        tar -zxvf ../../ACT_dr6_likelihood_v1.1.tgz
   
 
     - uses: actions/cache@v2
@@ -357,20 +246,6 @@ jobs:
         cosmosis-campaign  examples/des-campaign.yml --status fiducial-test-only > output/campaign.log
         grep -e "🟢 fiducial-test-only" output/campaign.log
         cosmosis-campaign  examples/des-campaign.yml --status
-
-    - name: Demo 2 Planck 2018 Likelihood
-      run: |
-        source .github/ci-setup.sh
-        cosmosis demos/demo2.ini
-        cosmosis-postprocess demos/demo2.ini -o output/demo2
-        test -f output/demo2/comoving_distance.png
-
-    - name: Demo 9 Low-Resolution Multinest
-      run: |
-        source .github/ci-setup.sh
-        cosmosis demos/demo9.ini -p multinest.live_points=100
-        cosmosis-postprocess output/demo9.txt -o output/demo9
-        test -f output/demo9/2D_supernova_params--deltam_cosmological_parameters--omega_m.png
 
     - name: ExampleNotebook
       shell: bash -l {0}
