move demos to test function to

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,7 +136,7 @@ jobs:
         shell: bash -l {0}
         run: |
           source cosmosis-configure
-          pytest -vv tests/test_cosmosis_standard_library.py
+          pytest -vv --durations=0 tests/test_cosmosis_standard_library.py
 
       - name: Run Demos
         shell: bash -l {0}
@@ -205,8 +205,10 @@ jobs:
         tar -zxvf ../../COM_Likelihood_Data-baseline_R3.00.tar.gz
         popd
         # ACT
-        pushd likelihood/act-dr6-lens/
-        tar -zxvf ../../ACT_dr6_likelihood_v1.1.tgz
+        mkdir likelihood/act-dr6-lens/data
+        pushd likelihood/act-dr6-lens/data
+        tar -zxvf ../../../ACT_dr6_likelihood_v1.1.tgz
+        popd
   
 
     - uses: actions/cache@v2
