--- a/likelihood/tdcosmo/module.yaml
+++ b/likelihood/tdcosmo/module.yaml
@@ -84,7 +84,7 @@ inputs:
 
 outputs:
   likelihoods:
-    tdcosmo_like:
+    TDCOSMO_like:
       meaning: Total likelihood of the TDCOSMO sample
       type: real
 
