--- a/examples/planck.ini
+++ b/examples/planck.ini
@@ -17,6 +17,7 @@ planck_path = likelihood/planck2018/baseline/plc_3.0
 ; these names refer to sections later in the file:
 modules = consistency camb planck
 values = examples/planck_values.ini
+priors = examples/planck_priors.ini
 debug=T
 timing=F
 
