--- a/likelihood/tdcosmo/module.yaml
+++ b/likelihood/tdcosmo/module.yaml
@@ -8,11 +8,20 @@ attribution:
   - TBD for the cosmoSIS implementation
 rules: None.
 cite:
-  -
+  - TDCOSMO IV, Birrer et al., 2020, A&A, 643, A165
+  - Suyu et al., 2010, ApJ, 711, 201
+  - Suyu et al., 2014, ApJ, 788, L35
+  - Wong et al., 2017, MNRAS, 465, 4895
+  - Birrer et al., 2019, MNRAS, 484, 4726
+  - Chen et al., 2019, MNRAS, 490, 1743
+  - Jee et al., 2019, Science, 365, 1134
+  - Rusu et al., 2020, MNRAS, 498, 1440
+  - Wong et al., 2020, MNRAS, 498, 1420
+  - Sahjib et al., 2020, MNRAS, 494, 6072
 assumptions:
-  -
+  - test
 explanation:
-  -
+  - test
 
 params:
   data_sets:
@@ -25,11 +34,12 @@ params:
     type: int
     default: 200
 
-  #todo : Is the cosmological model defined here ??
-  cosmo_model:
-    meaning: Cosmological model
+  distances_computation_module:
+    meaning: Module used distance-redshift relation. 'astropy' uses standard astropy cosmology w0waCDM. 
+              'CosmoInterp' to use the CosmoInterp module of lenstronomy to interpolate. 'camb' will use the distances 
+              provided by camb to compute Ds, Dd, and Dds.
     type: str
-    default: 'LambdaCDM'
+    default: 'astropy'
 
 inputs:
   #  distances:
@@ -46,7 +56,7 @@ inputs:
     omega_l:
       meaning: Dark energy density fraction today
       type: real
-      default: 0.0
+      default:
     h0:
       meaning: Hubble parameter H0 (km/s/Mpc)
       type: real
