Debugging likelihood and converting priors to log space.

--- a/examples/tdcosmo_apriori.ini
+++ b/examples/tdcosmo_apriori.ini
@@ -15,7 +15,7 @@ priors = examples/priors_tdcosmo.ini
 
 [output]
 format=text
-filename=output/tdcosmo.txt
+filename=output/tdcosmo_prior.txt
 
 ; We have a single likelihood module here - BICEP2.
 [tdcosmo]
@@ -45,7 +45,7 @@ file = utility/consistency/consistency_interface.py
 
 [polychord]
 base_dir = output/y3-polychord-checkpoints
-polychord_outfile_root = tdcosmo
+polychord_outfile_root = tdcosmo_prior
 resume = F
 feedback = 3
 fast_fraction = 0.1
@@ -66,3 +66,5 @@ walkers = 80
 samples = 10000
 nsteps = 5
 
+[apriori]
+nsample = 100000
