--- a/likelihood/act-dr6-lens/module.yaml
+++ b/likelihood/act-dr6-lens/module.yaml
@@ -21,10 +21,6 @@ explanation: |
 
 # List of parameters that can go in the params.ini file in the section for this module    
 params:
-    data_directory:
-        meaning: "Directory to search for data"
-        type: str
-        default: "[module dir]/data"
     variant:
         meaning: "The variant of the DR6 lensing likelihood to use. Options are 
                   act_baseline, act_extended, actplanck_baseline, actplanck_extended, act_polonly, act_cibdeproj, act_cinpaint"
@@ -52,10 +48,10 @@ params:
         meaning: "The number of simulations used to create the Planck portion of the covariance matrix."
         type: int
         default: 400
-    like_corrections:
-        meaning: "If set to True, will apply appropriate likelihood norm corrections."
+    no_like_corrections:
+        meaning: "If set to True, will not apply appropriate likelihood norm corrections."
         type: bool
-        default: True
+        default: False
     trim_lmax:
         meaning: "Maximum L to use from the lensing kk spectra."
         type: int
@@ -65,10 +61,10 @@ params:
         type: bool
         default: True
     scale_cov:
-        meaning: "A value /as a string/ by which to scale the covariance matrix by a given value (for e.g. making forecasts)."
+        meaning: "A value by which to scale the covariance matrix by a given value (for e.g. making forecasts)."
         type: str
-        default: ''
-    varying_cmb_alens:
+        default: ""
+    alens:
         meaning: "Whether or not to divide the lensing theory spectrum by an A_lens parameter, if one is being used." 
         type: bool
         default: False
@@ -108,6 +104,9 @@ outputs:
             meaning: "ACT DR6 lensing likelihood for given selection"
             type: real
     data_vector:
+        act_dr6_lens_theory:
+            meaning: "Predicted theory value, only if like_only=False"
+            type: real 1d
         act_dr6_lens_data:
             meaning: "Binned CLkk data, only if like_only=False"
             type: real 1d
