--- a/examples/values_tdcosmo.ini
+++ b/examples/values_tdcosmo.ini
@@ -17,9 +17,9 @@ nnu = 3.046
 ; kinematics and Mass-Sheet Degeneracy parameters
 lambda_mst = 0.5 1.0 1.5
 ;lambda_mst_sigma = 0 0.04 0.2
-log_lambda_mst_sigma = 0.001 0.04 0.5
+log_lambda_mst_sigma = -3 -1.398 -0.301
 alpha_lambda = -1. 0.0 1.
 ;a_ani = 0.1 1.5 5.
 ;a_ani_sigma = 0. 0.3 1.
-log_a_ani = 0.1 1.5 5.
-log_a_ani_sigma = 0.01 0.3 1.
+log_a_ani = -1 0.176 0.699
+log_a_ani_sigma = -2 -0.523 0.
