add supporting files for HSC Y3 likelihood

--- a/examples/hsc-y3-shear.ini
+++ b/examples/hsc-y3-shear.ini
@@ -1,9 +1,7 @@
-; This is an example using the HSC Year 3 cosmic shear data.
-; It is based on Dalal et al, but that work used the power spectrum
-; the power spectrum from the linear BACCO emulator and pyhmcode2016, the
-; interfaces for which are not public immediately. Results may be slightly
-; different, but S_8 constraints should match well.
-
+;***********************************
+;multinest is the default sampler
+;***********************************
+; parameters used elsewhere in this file
 [DEFAULT]
 2PT_FILE = likelihood/hsc_cosmic_shear/hsc_y3_fourier_shear.sacc
 
@@ -77,20 +75,20 @@ file = structure/hmcode_eta/hmcode_eta.py
 [camb]
 file = boltzmann/camb/camb_interface.py
 mode = power
-feedback=0
-AccuracyBoost=1.0
-do_tensors = F
-do_lensing = F
-kmin = 1e-4
-kmax = 50.0
-nk   = 500
+lmax = 2500          ;max ell to use for cmb calculation
+feedback=0         ;amount of output to print
+AccuracyBoost=1.1 ;CAMB accuracy boost parameter
+do_tensors = T
+do_lensing = T
 NonLinear = pk
-neutrino_hierarchy = normal
 halofit_version = mead2016
 zmin_background = 0.
 zmax_background = 4.
 nz_background = 401
+kmin=1e-4
+kmax = 50.0
 kmax_extrapolate = 500.0
+nk=700
 
 
 [consistency]
