changed alens parm name, changed to full pypi

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,7 +137,7 @@ jobs:
       - name: Install likelihood python dependencies from pip
         shell: bash -l {0}
         run: |
-          pip install --index-url https://test.pypi.org/simple/ act_dr6_lenslike
+          pip install act_dr6_lenslike
 
       - name: Run Tests
         shell: bash -l {0}
