--- a/examples/hsc-y3-shear.ini
+++ b/examples/hsc-y3-shear.ini
@@ -75,20 +75,20 @@ file = structure/hmcode_eta/hmcode_eta.py
 [camb]
 file = boltzmann/camb/camb_interface.py
 mode = power
-lmax = 2500          ;max ell to use for cmb calculation
-feedback=0         ;amount of output to print
-AccuracyBoost=1.1 ;CAMB accuracy boost parameter
-do_tensors = T
-do_lensing = T
+feedback=0
+AccuracyBoost=1.0
+do_tensors = F
+do_lensing = F
+kmin = 1e-4
+kmax = 50.0
+nk   = 500
 NonLinear = pk
+neutrino_hierarchy = normal
 halofit_version = mead2016
 zmin_background = 0.
 zmax_background = 4.
 nz_background = 401
-kmin=1e-4
-kmax = 50.0
 kmax_extrapolate = 500.0
-nk=700
 
 
 [consistency]
